photo detail part done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button onclick="loadPhotos()" class="btn btn-primary fs-4" type="button">Load Photos</button>
         </div>
 
-        <div id="photo-detail" class="col mx-auto my-5">
+        <div id="photo-detail" class="w-50 h-25 mx-auto my-5">
         </div>
         <div id="album" class="row row-cols-1 row-cols-md-3 g-4 my-5">
         </div>
